# nodespace-nlp-engine

./: .gitignore  CLAUDE.md  Cargo.toml  POST_MVP_ENHANCEMENTS.md  RD_PLAN_UPDATED.md  README.md  test_compare_tokenizers.py
docs/: implementation-phases.md  integration-guide.md  multimodal-architecture.md  multimodal-evaluation-strategy.md  testing-multimodal.md
docs/legacy/: README.md  TOKENIZER_COMPATIBILITY.md
examples/: debug_text_generation.rs  download_gemma3_onnx.rs  gemma3_investigation.rs  gemma3_production_ready.rs  gemma3_tokenization.rs  generate_embeddings.rs  inspect_onnx_model.rs  mlx_test.rs  mlx_text_generation.rs  multimodal_demo.rs  onnx_contract_test.rs  onnx_gemma3_test.rs  performance_comparison.rs  rag_integration.rs  regenerate_sample_database.rs  session3_complete.rs  simple_text_gen_test.rs  test_kv_cache_fix.rs  test_ollama.rs  test_onnx_correct_inputs.rs  test_onnx_inference_debug.rs  test_onnx_with_tracing.rs  test_phi4.rs  test_rag_context_fix.rs  test_rag_with_fix.rs  text_generation.rs  verify_ns126.rs
src/: embedding.rs  engine.rs  error.rs  evaluation.rs  image_processing.rs  lib.rs  models.rs  multi_level_embedding.rs  ollama.rs  onnx_text_generation.rs  phi4_test.rs  surrealql.rs  text_generation.rs  unified_text_generation.rs  utils.rs
tests/: contract_compliance.rs  evaluation_tests.rs  performance_tests.rs  test_ollama_integration.rs  tokenizer_validation.rs  trait_compliance.rs
