[package]
name = "nodespace-nlp-engine"
version = "0.1.0"
edition = "2021"
description = "AI/ML processing and SurrealDB integration for NodeSpace"
license = "MIT"
repository = "https://github.com/malibio/nodespace-nlp-engine"

[dependencies]
# Core NodeSpace types
nodespace-core-types = { path = "../nodespace-core-types" }

# Async runtime
tokio = { version = "1.0", features = ["sync", "time", "macros", "rt-multi-thread"] }
async-trait = "0.1"

# AI/ML and model inference (unified ONNX Runtime stack)
fastembed = { version = "4.9", optional = true }
hf-hub = { version = "0.4.2", features = ["tokio"], optional = true }

# Image processing and multimodal support
image = { version = "0.25", optional = true }
kamadak-exif = { version = "0.5", optional = true }

# Tokenization and text processing
tokenizers = { version = "0.19", optional = true }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
regex = "1.0"

# Performance and caching
dashmap = "5.0"

# Evaluation metrics (optional) - using custom implementations

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
tracing-subscriber = "0.3"

[features]
default = ["real-ml"]
real-ml = ["fastembed", "tokenizers", "hf-hub"]
multimodal = ["real-ml", "image", "kamadak-exif"]
evaluation = []  # Custom evaluation implementations, no external deps needed
cpu-only = ["real-ml"]

[[example]]
name = "generate_embeddings"
path = "examples/generate_embeddings.rs"

[[example]]
name = "text_generation"
path = "examples/text_generation.rs"

[[example]]
name = "regenerate_sample_database"
path = "examples/regenerate_sample_database.rs"

[[example]]
name = "multimodal_demo"
path = "examples/multimodal_demo.rs"

[lib]
name = "nodespace_nlp_engine"
path = "src/lib.rs"